--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-
+    <title>Portfolio | Bridget Bidigare</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,10 +31,16 @@
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://kit.fontawesome.com/39faf47002.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <h3>👋🏻 hello, i'm</h3>
     <h1>Bridget Bidigare</h1>
-    <h2>Front-end developer based in Chicago, IL</h2>
+    <h2>Front-end developer based in Chicago, IL 👩🏻‍💻</h2>
     <p>
       The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
       consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -39,7 +50,40 @@
       nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
       culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <a href="/pages/about.html">About me</a>
-    <a href="/pages/projects.html">My projects</a>
+    <p>
+      The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+      The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <a href="/pages/about.html" title="About me" class="links">About me</a>
+    <a href="/pages/projects.html" title="My projects" class="links"
+      >My projects</a
+    >
+    <footer>
+      <a href="https://www.instagram.com/brridgetlee/" title="Instagram"
+        ><i class="fab fa-instagram"></i
+      ></a>
+      <br />
+      <a href="https://www.linkedin.com/in/bridget-bidigare/" title="LinkedIn"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+      <br />
+      <a href="mailto:bridgetbidigare@gmail.com" title="Email"
+        ><i class="far fa-envelope"></i
+      ></a>
+    </footer>
   </body>
 </html>
