--- a/pages/about.html
+++ b/pages/about.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <title>Document</title>
+    <title>About me | Bridget Bidigare</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/style.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,10 +31,21 @@
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://kit.fontawesome.com/39faf47002.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>About me</h1>
-    <a href="/">Homepage</a>
-    <a href="/pages/projects.html">My projects</a>
+    <h1>About Me</h1>
+    <img
+      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
+      alt="Picture of me"
+    />
+    <a href="/" title="Homepage" class="links">Home</a>
+    <a href="/pages/projects.html" title="My projects" class="links"
+      >My projects</a
+    >
   </body>
 </html>
