Added github to footer & put footer on other pages

--- a/index.html
+++ b/index.html
@@ -42,46 +42,39 @@
     <h1>Bridget Bidigare</h1>
     <h2>Front-end developer based in Chicago, IL 👩🏻‍💻</h2>
     <p>
-      The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
-      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-      culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <p>
-      The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
-      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-      culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <p>
-      The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet,
-      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-      culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
     <a href="/pages/about.html" title="About me" class="links">About me</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
     >
     <footer>
-      <a href="https://www.instagram.com/brridgetlee/" title="Instagram"
+      <a
+        href="https://github.com/bridgetbidigare"
+        title="Github"
+        target="_blank"
+        ><i class="fab fa-github"></i
+      ></a>
+      <br />
+      <a
+        href="https://www.instagram.com/brridgetlee/"
+        title="Instagram"
+        target="_blank"
         ><i class="fab fa-instagram"></i
       ></a>
       <br />
-      <a href="https://www.linkedin.com/in/bridget-bidigare/" title="LinkedIn"
+      <a
+        href="https://www.linkedin.com/in/bridget-bidigare/"
+        title="LinkedIn"
+        target="_blank"
         ><i class="fab fa-linkedin-in"></i
       ></a>
       <br />
-      <a href="mailto:bridgetbidigare@gmail.com" title="Email"
+      <a href="mailto:bridgetbidigare@gmail.com" title="Email" target="_blank"
         ><i class="far fa-envelope"></i
       ></a>
     </footer>
