--- a/pages/about.html
+++ b/pages/about.html
@@ -47,5 +47,31 @@
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
     >
+    <footer>
+      <a
+        href="https://github.com/bridgetbidigare"
+        title="Github"
+        target="_blank"
+        ><i class="fab fa-github"></i
+      ></a>
+      <br />
+      <a
+        href="https://www.instagram.com/brridgetlee/"
+        title="Instagram"
+        target="_blank"
+        ><i class="fab fa-instagram"></i
+      ></a>
+      <br />
+      <a
+        href="https://www.linkedin.com/in/bridget-bidigare/"
+        title="LinkedIn"
+        target="_blank"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+      <br />
+      <a href="mailto:bridgetbidigare@gmail.com" title="Email" target="_blank"
+        ><i class="far fa-envelope"></i
+      ></a>
+    </footer>
   </body>
 </html>
