--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,5 +41,31 @@
     <h1>My Projects</h1>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/about.html" title="About me" class="links">About me</a>
+    <footer>
+      <a
+        href="https://github.com/bridgetbidigare"
+        title="Github"
+        target="_blank"
+        ><i class="fab fa-github"></i
+      ></a>
+      <br />
+      <a
+        href="https://www.instagram.com/brridgetlee/"
+        title="Instagram"
+        target="_blank"
+        ><i class="fab fa-instagram"></i
+      ></a>
+      <br />
+      <a
+        href="https://www.linkedin.com/in/bridget-bidigare/"
+        title="LinkedIn"
+        target="_blank"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+      <br />
+      <a href="mailto:bridgetbidigare@gmail.com" title="Email" target="_blank"
+        ><i class="far fa-envelope"></i
+      ></a>
+    </footer>
   </body>
 </html>
