--- a/pages/about.html
+++ b/pages/about.html
@@ -43,6 +43,13 @@
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
       alt="Picture of me"
     />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
