--- a/pages/about.html
+++ b/pages/about.html
@@ -39,17 +39,35 @@
   </head>
   <body>
     <h1>About Me</h1>
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
-      alt="Picture of me"
-    />
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur.
-    </p>
+    <div class="container">
+      <div class="row">
+        <p class="col-8">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. <i class="fab fa-css3-alt"></i>
+          <i class="fab fa-html5"></i> <i class="fab fa-js-square"></i>
+          <i class="fab fa-react"></i> <i class="fas fa-code"></i>
+          <i class="fas fa-terminal"></i> <i class="fab fa-bootstrap"></i>
+          <i class="fab fa-google"></i
+          ><a
+            href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
+            title="SheCodes"
+            target="_blank"
+            ><img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
+              width="30px"
+          /></a>
+        </p>
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
+          alt="Picture of me"
+          class="col-4 me-pic"
+        />
+      </div>
+    </div>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
