--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/pages/about.html">About me</a>
             <a class="nav-link" href="/pages/projects.html">My projects</a>
             <a class="nav-link" href="/">Contact me</a>
