--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,8 +36,42 @@
       src="https://kit.fontawesome.com/39faf47002.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Bridget Bidigare</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-lg-flex justify-content-end"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/pages/about.html">About me</a>
+            <a class="nav-link active" href="/pages/projects.html"
+              >My projects</a
+            >
+            <a class="nav-link" href="/">Contact me</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <h1>My Projects</h1>
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/119/original/weatherapp.png?1639878760"
