Replaced images, added portfolio section on homepage

--- a/index.html
+++ b/index.html
@@ -75,10 +75,22 @@
       <h1>Bridget Bidigare</h1>
       <h2>Front-end developer based in Chicago, IL</h2>
     </div>
-    <a href="/pages/about.html" title="About me" class="links">About me</a>
-    <a href="/pages/projects.html" title="My projects" class="links"
-      >My projects</a
-    >
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <img src="/media/cert.png" class="certificate" />
+        </div>
+        <div class="col-7 cert-section">
+          <span><h4 class="mt-5 mb-5">Portfolio</h4></span>
+          <a href="/pages/about.html" title="About me" class="links"
+            >About me</a
+          >
+          <a href="/pages/projects.html" title="My projects" class="links"
+            >My projects</a
+          >
+        </div>
+      </div>
+    </div>
     <footer>
       <a
         href="https://github.com/bridgetbidigare"
