--- a/pages/about.html
+++ b/pages/about.html
@@ -71,9 +71,9 @@
       </div>
     </nav>
     <h1>About Me</h1>
-    <div class="container">
+    <div class="container about-me-container">
       <div class="row">
-        <p class="col-8">
+        <p class="col-8 about-me">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
