--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,10 +73,7 @@
       </div>
     </nav>
     <h1>My Projects</h1>
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/119/original/weatherapp.png?1639878760"
-      width="600px"
-    />
+    <img src="/media/weather.png" width="600px" />
     <div style="position: relative">
       <iframe
         src="https://player.vimeo.com/video/658231369?h=996c90cb16&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
@@ -87,13 +84,10 @@
       ></iframe>
     </div>
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/118/original/astrolaptop.png?1639878746"
-      width="600px"
-    />
+    <img src="/media/astro.png" width="600px" />
     <div style="position: relative">
       <iframe
-        src="https://player.vimeo.com/video/658227040?h=81e57e8c8d&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+        src="https://player.vimeo.com/video/658369085?h=76829cbbd6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
         frameborder="0"
         allow="autoplay; fullscreen; picture-in-picture"
         allowfullscreen
