--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
       <h1>Bridget Bidigare</h1>
       <h2>Front-end developer based in Chicago, IL</h2>
     </div>
-    <div class="container">
+    <div class="container homepage-container">
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-5">
           <img src="/media/cert.png" class="certificate" />
         </div>
-        <div class="col-7 cert-section">
+        <div class="col-lg-7 cert-section">
           <span><h4 class="mt-5 mb-5">Portfolio</h4></span>
           <a href="/pages/about.html" title="About me" class="links"
             >About me</a
