--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
 
@@ -72,8 +72,8 @@
     </nav>
     <div class="homepage-hero">
       <h3>hello, i'm</h3>
-      <h1>Bridget Bidigare</h1>
-      <h2>Front-end developer based in Chicago, IL</h2>
+      <img src="/media/name.png" class="name-image" />
+      <h2>Front-end developer living in Chicago, IL</h2>
     </div>
     <div class="container homepage-container">
       <div class="row">
