--- a/pages/projects.html
+++ b/pages/projects.html
@@ -43,7 +43,9 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent sticky-top">
+    <nav
+      class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Bridget Bidigare</a>
         <button
