Added skills & certificates section

--- a/pages/about.html
+++ b/pages/about.html
@@ -75,25 +75,13 @@
     <h1>About Me</h1>
     <div class="container about-me-container">
       <div class="row">
-        <p class="col-8 about-me">
+        <p class="col-8 about-section">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat. Duis aute irure dolor in
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. <i class="fab fa-css3-alt"></i>
-          <i class="fab fa-html5"></i> <i class="fab fa-js-square"></i>
-          <i class="fab fa-react"></i> <i class="fas fa-code"></i>
-          <i class="fas fa-terminal"></i> <i class="fab fa-bootstrap"></i>
-          <i class="fab fa-google"></i
-          ><a
-            href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
-            title="SheCodes"
-            target="_blank"
-            ><img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
-              width="30px"
-          /></a>
+          pariatur.
         </p>
         <img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
@@ -102,6 +90,26 @@
         />
       </div>
     </div>
+    <h3 class="mt-5 mb-5"><i>Skills Learned:</i></h3>
+    <span class="skills-section">
+      <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
+      <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
+      <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
+    </span>
+    <h3 class="mt-5 mb-5"><i>Certficates:</i></h3>
+    <img src="/media/basicscert.png" class="certs" />
+    <img src="/media/pluscert.png" class="certs" />
+    <br />
+    <span
+      ><i class="fas fa-code"></i> <i class="fas fa-terminal"></i
+      ><a
+        href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
+        title="SheCodes"
+        target="_blank"
+        ><img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
+          width="30px" /></a
+    ></span>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
