Added contact page and updated headers

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,12 +69,13 @@
             <a class="nav-link active" href="/pages/projects.html"
               >My projects</a
             >
-            <a class="nav-link" href="/">Contact me</a>
+            <a class="nav-link" href="/pages/contact.html">Contact me</a>
           </div>
         </div>
       </div>
     </nav>
-    <h1>My Projects</h1>
+    <img src="/media/myprojects.png" width="400px" />
+    <br />
     <img src="/media/weather.png" width="600px" />
     <div style="position: relative">
       <iframe
