--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/pages/about.html">About me</a>
             <a class="nav-link" href="/pages/projects.html">My projects</a>
-            <a class="nav-link" href="/">Contact me</a>
+            <a class="nav-link" href="/pages/contact.html">Contact me</a>
           </div>
         </div>
       </div>
