--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <title>About me | Bridget Bidigare</title>
+    <title>My projects | Bridget Bidigare</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -65,55 +65,18 @@
         >
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" href="/pages/about.html">About me</a>
+            <a class="nav-link" href="/pages/about.html">About me</a>
             <a class="nav-link" href="/pages/projects.html">My projects</a>
-            <a class="nav-link" href="/pages/contact.html">Contact me</a>
+            <a class="nav-link active" href="/pages/contact.html">Contact me</a>
           </div>
         </div>
       </div>
     </nav>
-    <img src="/media/aboutme.png" width="400px" />
-    <div class="container about-me-container">
-      <div class="row">
-        <p class="col-8 about-section">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur.
-        </p>
-        <img
-          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
-          alt="Picture of me"
-          class="col-4 me-pic"
-        />
-      </div>
-    </div>
-    <h3 class="mt-5 mb-5"><i>Skills Learned:</i></h3>
-    <span class="skills-section">
-      <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
-      <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
-      <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
-    </span>
-    <h3 class="mt-5 mb-5"><i>Certficates:</i></h3>
-    <img src="/media/basicscert.png" class="certs" />
-    <img src="/media/pluscert.png" class="certs" />
+    <img src="/media/contactme.png" width="400px" />
     <br />
-    <span
-      ><i class="fas fa-code"></i> <i class="fas fa-terminal"></i
-      ><a
-        href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
-        title="SheCodes"
-        target="_blank"
-        ><img
-          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
-          width="30px" /></a
-    ></span>
+    <br />
     <a href="/" title="Homepage" class="links">Home</a>
-    <a href="/pages/projects.html" title="My projects" class="links"
-      >My projects</a
-    >
+    <a href="/pages/about.html" title="About me" class="links">About me</a>
     <footer>
       <a
         href="https://github.com/bridgetbidigare"
