Changed footer to be a fixed side bar

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
         title="Github"
