--- a/pages/about.html
+++ b/pages/about.html
@@ -114,7 +114,7 @@
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
     >
-    <footer>
+    <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
         title="Github"
