--- a/pages/projects.html
+++ b/pages/projects.html
@@ -369,7 +369,7 @@
     <script async src="//www.instagram.com/embed.js"></script>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/about.html" title="About me" class="links">About me</a>
-    <footer>
+    <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
         title="Github"
