--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,7 +77,7 @@
     <br />
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/about.html" title="About me" class="links">About me</a>
-    <footer>
+    <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
         title="Github"
