--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Bridget Bidigare</a>
+        <a class="navbar-brand" href="/"
+          ><img src="/media/BB.png" width="80px"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
