--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,8 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Bridget Bidigare</a>
+        <a class="navbar-brand" href="/"><img src="/media/BB.png" width="80px"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -92,7 +93,7 @@
     </div>
     <h3 class="mt-5 mb-5"><i>Skills Learned:</i></h3>
     <span class="skills-section">
-      <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
+      <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> </i>
       <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
       <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
     </span>
