Organized CSS and got rid of picture on homepage

--- a/index.html
+++ b/index.html
@@ -79,22 +79,15 @@
       <img src="/media/name.png" class="name-image" />
       <h2>Front-end developer living in Chicago, IL</h2>
     </div>
-    <div class="container homepage-container">
-      <div class="row">
-        <div class="col-lg-5">
-          <img src="/media/cert.png" class="certificate" />
-        </div>
-        <div class="col-lg-7 cert-section">
-          <span><h4 class="mt-5 mb-5">Portfolio</h4></span>
-          <a href="/pages/about.html" title="About me" class="links"
-            >About me</a
-          >
-          <a href="/pages/projects.html" title="My projects" class="links"
-            >My projects</a
-          >
-        </div>
-      </div>
-    </div>
+    <a href="/pages/about.html" title="About me" class="links"
+      >learn about me</i></i
+    ></a>
+    <a href="/pages/projects.html" title="My projects" class="links"
+      >check out my projects</a
+    >
+    <a href="/pages/contact.html" title="My projects" class="links"
+      >contact me</a
+    >
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
