--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       <img src="/media/name.png" class="name-image" />
       <h2>Front-end developer living in Chicago, IL</h2>
     </div>
-    <a href="/pages/about.html" title="About me" class="links"
+    <a href="/pages/about.html" title="About me" class="home-links"
       >learn about me</i></i
     ></a>
-    <a href="/pages/projects.html" title="My projects" class="links"
-      >check out my projects</a
+    <a href="/pages/projects.html" title="My projects" class="home-links"
+      >see my projects</a
     >
-    <a href="/pages/contact.html" title="My projects" class="links"
+    <a href="/pages/contact.html" title="My projects" class="home-links"
       >contact me</a
     >
     <footer class="footer footer2">
