--- a/pages/about.html
+++ b/pages/about.html
@@ -76,18 +76,25 @@
     <img src="/media/aboutme.png" width="400px" />
     <div class="container about-me-container">
       <div class="row">
-        <p class="col-8 about-section">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        <p class="col-md-8 about-section">
+          <i class="fas fa-terminal"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat. Duis aute irure dolor in
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur.
+          pariatur.<i class="fas fa-code"></i>
+        <span><a
+        href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
+        title="SheCodes"
+        target="_blank"
+        ><img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
+          width="30px" /></a></span>
         </p>
         <img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
           alt="Picture of me"
-          class="col-4 me-pic"
+          class="col-md-4 me-pic"
         />
       </div>
     </div>
@@ -97,23 +104,17 @@
       <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
       <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
     </span>
+    <div>
     <h3 class="mt-5 mb-5"><i>Certficates:</i></h3>
     <img src="/media/basicscert.png" class="certs" />
     <img src="/media/pluscert.png" class="certs" />
-    <br />
-    <span
-      ><i class="fas fa-code"></i> <i class="fas fa-terminal"></i
-      ><a
-        href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
-        title="SheCodes"
-        target="_blank"
-        ><img
-          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
-          width="30px" /></a
-    ></span>
+    </div>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
+    >
+    <a href="/pages/contact.html" title="Contact me" class="links"
+      >Contact me</a
     >
     <footer class="footer footer2">
       <a
