Bones of contact page

--- a/pages/about.html
+++ b/pages/about.html
@@ -109,13 +109,14 @@
     <img src="/media/basicscert.png" class="certs" />
     <img src="/media/pluscert.png" class="certs" />
     </div>
+    <div>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
       >My projects</a
     >
     <a href="/pages/contact.html" title="Contact me" class="links"
       >Contact me</a
-    >
+    ></div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
