--- a/pages/projects.html
+++ b/pages/projects.html
@@ -369,8 +369,13 @@
       </div>
     </blockquote>
     <script async src="//www.instagram.com/embed.js"></script>
-    <a href="/" title="Homepage" class="links">Home</a>
-    <a href="/pages/about.html" title="About me" class="links">About me</a>
+    <div>
+      <a href="/" title="Homepage" class="links">Home</a>
+      <a href="/pages/about.html" title="About me" class="links">About me</a>
+      <a href="/pages/contact.html" title="Contact me" class="links"
+        >Contact me</a
+      >
+    </div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
