--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,9 +76,32 @@
     </nav>
     <img src="/media/contactme.png" width="400px" />
     <br />
-    <br />
-    <a href="/" title="Homepage" class="links">Home</a>
-    <a href="/pages/about.html" title="About me" class="links">About me</a>
+    <h2 class="mt-5 mb-3">Reach out to me!</h2>
+    <h4>
+      I am open to internships and part- or full-time work in front-end
+      development.
+    </h4>
+    <div class="mb-5">
+      <h5>Email</h5>
+      <a href="mailto:bridgetbidigare@gmail.com" target="_blank"
+        >bridgetbidigare@gmail.com</a
+      >
+      <h5>LinkedIn</h5>
+      <a href="https://www.linkedin.com/in/bridget-bidigare/" target="_blank"
+        >@bridget-bidigare</a
+      >
+      <h5>Instagram</h5>
+      <a href="https://www.instagram.com/brridgetlee" target="_blank"
+        >@brridgetlee</a
+      >
+    </div>
+    <div>
+      <a href="/" title="Homepage" class="links">Home</a>
+      <a href="/pages/about.html" title="About me" class="links">About me</a>
+      <a href="/pages/projects.html" title="My projects" class="links"
+        >My projects</a
+      >
+    </div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
