Styled contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,12 +76,12 @@
     </nav>
     <img src="/media/contactme.png" width="400px" />
     <br />
-    <h2 class="mt-5 mb-3">Reach out to me!</h2>
+    <h1 class="mt-5 mb-3">Reach out to me!</h1>
     <h4>
-      I am open to internships and part- or full-time work in front-end
-      development.
+      I am open to internships and part- or full-time work in
+      <mark>front-end development</mark>.
     </h4>
-    <div class="mb-5">
+    <div class="contact-section">
       <h5>Email</h5>
       <a href="mailto:bridgetbidigare@gmail.com" target="_blank"
         >bridgetbidigare@gmail.com</a
