Added content to projects page and made responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </nav>
-    <img src="/media/aboutme.png" width="400px" />
+    <img src="/media/aboutme.png" class="about-image" />
     <div class="container about-me-container">
       <div class="row">
         <p class="col-md-8 about-section">
@@ -98,14 +98,14 @@
         />
       </div>
     </div>
-    <h3 class="mt-5 mb-5"><i>Skills Learned:</i></h3>
+    <h3 class="mt-5 mb-4"><i>Skills Learned:</i></h3>
     <span class="skills-section">
       <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> </i>
       <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
       <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
     </span>
     <div>
-    <h3 class="mt-5 mb-5"><i>Certficates:</i></h3>
+    <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
     <img src="/media/basicscert.png" class="certs" />
     <img src="/media/pluscert.png" class="certs" />
     </div>
