--- a/pages/contact.html
+++ b/pages/contact.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </nav>
-    <img src="/media/contactme.png" width="400px" />
+    <img src="/media/contactme.png" class="contact-image" />
     <br />
     <h1 class="mt-5 mb-3">Reach out to me!</h1>
     <h4>
@@ -82,15 +82,15 @@
       <mark>front-end development</mark>.
     </h4>
     <div class="contact-section">
-      <h5>Email</h5>
+      <h3>Email</h3>
       <a href="mailto:bridgetbidigare@gmail.com" target="_blank"
         >bridgetbidigare@gmail.com</a
       >
-      <h5>LinkedIn</h5>
+      <h3>LinkedIn</h3>
       <a href="https://www.linkedin.com/in/bridget-bidigare/" target="_blank"
         >@bridget-bidigare</a
       >
-      <h5>Instagram</h5>
+      <h3>Instagram</h3>
       <a href="https://www.instagram.com/brridgetlee" target="_blank"
         >@brridgetlee</a
       >
