Updated about me section

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,26 +77,25 @@
     <div class="container about-me-container">
       <div class="row">
         <p class="col-md-8 about-section">
-          <i class="fas fa-terminal"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur.<i class="fas fa-code"></i>
-        <span><a
-        href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
-        title="SheCodes"
-        target="_blank"
-        ><img
+          <i class="fas fa-terminal"></i> Hello! My name is Bridget Bidigare and I started coding just a few months ago in August 2021. I was feeling a little stuck career-wise at the time, saw an ad about coding, discovered SheCodes, and fell in love with coding! When I'm not online, I love to bake, read, and play games with my family & friends.
+          <br />
+          <br />
+          Check out my SheCodes profile here → <a
+          href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
+          title="SheCodes"
+          target="_blank"
+          ><img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
-          width="30px" /></a></span>
+          width="30px" /></a>
+          <br />
+          <a href="/pages/contact.html">Reach out to me!</a>
         </p>
         <img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
           alt="Picture of me"
           class="col-md-4 me-pic"
         />
-      </div>
+        </div>
     </div>
     <h3 class="mt-5 mb-4"><i>Skills Learned:</i></h3>
     <span class="skills-section">
