--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,7 @@
           <br />
           Check out my SheCodes profile here → <a
           href="https://www.shecodes.io/hall-of-fame?q=Bridget+Bidigare&commit=Search"
-          title="SheCodes"
+          title="SheCodes profile"
           target="_blank"
           ><img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
@@ -105,8 +105,8 @@
     </span>
     <div>
       <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
-      <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate"/>
-      <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate/>
+      <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate" />
+      <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate" />
     </div>
     <div>
     <a href="/" title="Homepage" class="links">Home</a>
