Added link to open source code for page

--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
     <a href="/pages/contact.html" title="My projects" class="home-links"
       >contact me</a
     >
+    <div>
+      <p class="open-source-link">
+        <a
+          href="https://github.com/bridgetbidigare/my-portfolio"
+          target="_blank"
+          title="Github code"
+          >open-source code</a
+        >
+        by bridget bidigare
+      </p>
+    </div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
