--- a/pages/about.html
+++ b/pages/about.html
@@ -116,6 +116,17 @@
     <a href="/pages/contact.html" title="Contact me" class="links"
       >Contact me</a
     ></div>
+    <div>
+      <p class="open-source-link">
+        <a
+          href="https://github.com/bridgetbidigare/my-portfolio"
+          target="_blank"
+          title="Github code"
+          >open-source code</a
+        >
+        by bridget bidigare
+      </p>
+    </div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
