--- a/pages/projects.html
+++ b/pages/projects.html
@@ -179,6 +179,17 @@
         >Contact me</a
       >
     </div>
+    <div>
+      <p class="open-source-link">
+        <a
+          href="https://github.com/bridgetbidigare/my-portfolio"
+          target="_blank"
+          title="Github code"
+          >open-source code</a
+        >
+        by bridget bidigare
+      </p>
+    </div>
     <footer class="footer footer2">
       <a
         href="https://github.com/bridgetbidigare"
