Added SheCodes Responsive certificate

--- a/pages/about.html
+++ b/pages/about.html
@@ -107,6 +107,7 @@
       <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
       <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate" />
       <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate" />
+      <img src="/media/responsivecert.png" class="certs" alt="SheCodes Responsive Certificate" />
     </div>
     <div>
     <a href="/" title="Homepage" class="links">Home</a>
