Added react certificates and projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,8 +112,52 @@
             weather. This was my first time integrating an API and it was so
             fun!
             <br />
+            <a
+              href="https://www.instagram.com/p/CeERfBRMWJ8/"
+              target="_blank"
+              title="SheCodes Instagram"
+              >Check out this project on SheCodes's instagram!</a
+            >
+            <br />
             <br />
             Made using: HTML5, CSS3, vanilla JavaScript, and API
+          </p>
+        </div>
+      </div>
+    </div>
+    <div style="position: relative">
+      <iframe
+        src="https://player.vimeo.com/video/658231369?h=996c90cb16&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+        frameborder="0"
+        allow="autoplay; fullscreen; picture-in-picture"
+        allowfullscreen
+        title="Weather App"
+      ></iframe>
+    </div>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="container projects-container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img
+            src="/media/weather.png"
+            class="app-image"
+            alt="My weather app 2.0"
+          />
+        </div>
+        <div class="col-lg-6">
+          <p>
+            <a
+              href="https://goofy-joliot-a49979.netlify.app/"
+              target="_blank"
+              title="My weather app 2.0"
+              ><h3>My weather app 2.0 →</h3></a
+            >I revamped my original weather app, and this time I incorporated
+            <b>React</b>. This was my first time using React, and I found it to
+            be a much more organized & streamlined approach to the application.
+            I think it looks better and functions better this way!
+            <br />
+            <br />
+            Made using: HTML5, CSS3, React, and API
           </p>
         </div>
       </div>
@@ -172,6 +216,55 @@
       ></iframe>
     </div>
     <script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="container projects-container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img
+            src="/media/astro.png"
+            class="app-image"
+            alt="My astrology website"
+          />
+        </div>
+        <div class="col-lg-6">
+          <p>
+            <a
+              href="https://super-daifuku-d81b6f.netlify.app/"
+              target="_blank"
+              title="My dictionary app"
+              ><h3>My dictionary app →</h3></a
+            >The goal for this project was to create a dictionary that could
+            give you a definition, pronunciation, examples, and synonyms for any
+            given word. I did this by integrating an
+            <a
+              href="https://dictionaryapi.dev/"
+              target="_blank"
+              title="Dictionary API"
+              >API</a
+            >
+            with all these features, as well as using
+            <a
+              href="https://www.pexels.com/"
+              target="_blank"
+              title="Stock photos"
+              >Pexels</a
+            >
+            for stock photos.
+            <br />
+            <br />
+            Made using: HTML5, CSS3, React, and API
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="mb-5">
+      <iframe
+        src="https://player.vimeo.com/video/658369085?h=76829cbbd6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+        frameborder="0"
+        allow="autoplay; fullscreen; picture-in-picture"
+        allowfullscreen
+        title="Astrology Website"
+      ></iframe>
+    </div>
     <div>
       <a href="/" title="Homepage" class="links">Home</a>
       <a href="/pages/about.html" title="About me" class="links">About me</a>
