--- a/pages/about.html
+++ b/pages/about.html
@@ -103,12 +103,13 @@
       <i class="fab fa-js-square"></i> <i class="fab fa-react"></i>
       <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
     </span>
-    <div>
       <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
-      <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate" />
-      <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate" />
-      <img src="/media/responsivecert.png" class="certs" alt="SheCodes Responsive Certificate" />
-    </div>
+      <div class="cert-section">
+        <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate" />
+        <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate" />
+        <img src="/media/responsivecert.png" class="certs" alt="SheCodes Responsive Certificate" />
+        <img src="/media/reactcert.png" class="certs" alt="SheCodes React Certificate" />
+      </div>
     <div>
     <a href="/" title="Homepage" class="links">Home</a>
     <a href="/pages/projects.html" title="My projects" class="links"
