Updated photos for projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -139,7 +139,7 @@
       <div class="row">
         <div class="col-lg-6">
           <img
-            src="/media/weather.png"
+            src="/media/weather2.png"
             class="app-image"
             alt="My weather app 2.0"
           />
@@ -162,16 +162,6 @@
         </div>
       </div>
     </div>
-    <div style="position: relative">
-      <iframe
-        src="https://player.vimeo.com/video/658231369?h=996c90cb16&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-        frameborder="0"
-        allow="autoplay; fullscreen; picture-in-picture"
-        allowfullscreen
-        title="Weather App"
-      ></iframe>
-    </div>
-    <script src="https://player.vimeo.com/api/player.js"></script>
     <div class="container projects-container">
       <div class="row">
         <div class="col-lg-6">
@@ -216,13 +206,13 @@
       ></iframe>
     </div>
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <div class="container projects-container">
+    <div class="container projects-container mb-5">
       <div class="row">
         <div class="col-lg-6">
           <img
-            src="/media/astro.png"
+            src="/media/dictionary.png"
             class="app-image"
-            alt="My astrology website"
+            alt="My dictionary app"
           />
         </div>
         <div class="col-lg-6">
@@ -255,15 +245,6 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="mb-5">
-      <iframe
-        src="https://player.vimeo.com/video/658369085?h=76829cbbd6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-        frameborder="0"
-        allow="autoplay; fullscreen; picture-in-picture"
-        allowfullscreen
-        title="Astrology Website"
-      ></iframe>
     </div>
     <div>
       <a href="/" title="Homepage" class="links">Home</a>
