Updated about me blurb

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,7 @@
     <div class="container about-me-container">
       <div class="row">
         <p class="col-md-8 about-section">
-          <i class="fas fa-terminal"></i> Hello! My name is Bridget Bidigare and I started coding just a few months ago in August 2021. I was feeling a little stuck career-wise at the time, saw an ad about coding, discovered SheCodes, and fell in love with coding! When I'm not online, I love to bake, read, and play games with my family & friends.
+          <i class="fas fa-terminal"></i> Hello! My name is Bridget Bidigare and I started coding in August 2021. I was feeling a little stuck career-wise at the time, saw an ad about coding, discovered SheCodes, and fell in love with coding! I've focused on Front End Development and have been learning HTML, CSS, and JavaScript. When I'm not online, I love to bake, read, and play games with my family & friends.
           <br />
           <br />
           Check out my SheCodes profile here → <a
